Admin UI button alignment fixes

--- a/src/Deviser.Core/Deviser.Admin.Web/ClientApp/src/deviser-admin.scss
+++ b/src/Deviser.Core/Deviser.Admin.Web/ClientApp/src/deviser-admin.scss
@@ -159,7 +159,7 @@
       min-width: 80px;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: space-around;
       i {
         display: flex;
         margin-right: 0.3rem;
