--- a/src/Deviser.Themes/Deviser.Themes.Skyline/wwwroot/css/admin/admin.css
+++ b/src/Deviser.Themes/Deviser.Themes.Skyline/wwwroot/css/admin/admin.css
@@ -10013,7 +10013,13 @@ html, body {
     height: 18px;
     stroke-width: 2px; }
   .edit-layout-container .btn.btn-action {
-    min-width: 80px; }
+    min-width: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around; }
+    .edit-layout-container .btn.btn-action i {
+      display: flex;
+      margin-right: 0.3rem; }
   .edit-layout-container .card .card-body.properties {
     font-size: 0.8rem;
     padding: 0.3rem; }
@@ -10629,7 +10635,8 @@ html, body {
 .admin-container .btn.btn-action {
   min-width: 80px;
   display: flex;
-  align-items: center; }
+  align-items: center;
+  justify-content: space-around; }
   .admin-container .btn.btn-action i {
     display: flex;
     margin-right: 0.3rem; }
