--- a/src/Deviser.Web/ClientApp/src/edit-layout.scss
+++ b/src/Deviser.Web/ClientApp/src/edit-layout.scss
@@ -16,8 +16,15 @@
       stroke-width: 2px;
     }
 
-    &.btn-action {
+    &.btn-action {      
       min-width: 80px;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      i {
+        display: flex;
+        margin-right: 0.3rem;
+      }
     }
   }
 
